# dog-o

./: CMakeLists.txt
android-studio/app/: build.gradle
android-studio/app/release/: output.json
apple/Dog-O/Dog-O/: Info.plist
apple/Dog-O/Dog-O Mac/: Info.plist
apple/Dog-O/Dog-O tvOS/: Info.plist
apple/Dog-O/Dog-O.xcodeproj/: project.pbxproj
data/: shim2.json
data/audio/samples/: auraball_appear.flac  awww.flac  bridge_collapse.flac  bumper_growl.flac  chilly_groan.flac  chilly_huh.flac  chilly_spit.flac  chilly_thud.flac  chomp.flac  clap.flac  coin_hit.flac  coin_jump.flac  coin_thud.flac  elevator_raising.flac  elevator_start.flac  evil_laugh.flac  grunt.flac  hat.flac  hoohoo.flac  kick.flac  laugh.flac  nomnom.flac  pop.flac  raspberry.flac  snare.flac  thud.flac  thump.flac
data/gfx/palettes/: explosion.gpl  flame.gpl  palette.gpl
data/misc/maps/: battle_cave1-.wm2  battle_cave2-.wm2  battle_cave3-.wm2  cave1_3.wm2  cave1_4.wm2  cave1_5.wm2  cave1_6.wm2  cave1_7.wm2  cave1_8.wm2  cave1_battletut.wm2  cave1_boss.wm2  cave1_drop.wm2  cave1_start.wm2  cave2_1.wm2  cave2_2.wm2  cave2_3.wm2  cave2_4.wm2  cave2_5.wm2  cave2_6.wm2  cave2_7.wm2  cave2_8.wm2  cave2_boss.wm2  cave3_1.wm2  cave3_2.wm2  cave3_3.wm2  cave3_4.wm2  cave3_5.wm2  cave3_6.wm2  cave3_7.wm2  cave3_8.wm2  cave3_boss.wm2  cave3_falls.wm2  end.wm2  pleasants.wm2  pleasants_u.wm2  start.wm2  toms.wm2  vances.wm2  village.wm2
data/text/: English.utf8  French.utf8
docs/: 3rd_party.html  Dog-O Demo translation_Fr_demo.xlsx  achievements.txt  achievements_french.txt  credits.txt  features.txt  steam_page-fr.docx  story.txt  sysreq.txt  sysreq_french.txt
include/: achievements.h  area_game.h  autosave.h  barter.h  battle_combo_drawer.h  battle_game.h  battle_player.h  battle_transition_in.h  battles.h  coin.h  combo.h  dialogue.h  dog-o.h  enemies.h  fire.h  general.h  globals.h  gui.h  gui_drawing_hook.h  hit.h  inventory.h  menu.h  milestones.h  multi.h  pan_camera.h  question.h  shop.h  shop_game.h  start_battle.h  stats.h  transition.h  widgets.h
misc/: game_actions_1292580.vdf  versioninfo.rc
misc/battle_bgs/: b.sh  make_battle_bg.cpp  make_battle_bg_boss1.cpp  make_battle_bg_lavaboss.cpp  make_battle_bg_lavabridge.cpp  make_battle_bg_randground.cpp
misc/steam/linux/: run_build_dogo.sh
misc/steam/mac/: run_build-dogo-mac-demo.sh  run_build-dogo-mac.sh
misc/steam/windows/: run_build_dogo.bat  run_build_dogo_demo.bat
shim2/: CMakeLists.txt  versioninfo.rc
shim2/include/shim2/: a_star.h  achievements.h  audio.h  basic_types.h  cd.h  cloud.h  cpa.h  crash.h  devsettings.h  error.h  flac.h  font.h  gfx.h  gui.h  image.h  input.h  interp.h  ios.h  json.h  macosx.h  main.h  md5.h  mml.h  model.h  mt.h  pixel_font.h  primitives.h  sample.h  shader.h  shim.h  shim2.h  sound.h  sprite.h  tilemap.h  tokenizer.h  translation.h  trigger.h  ttf.h  utf8.h  util.h  (+5 more)
shim2/misc/utils/: change_colour.cpp  compress_dir.cpp  convert_model.cpp  convert_tilemap.cpp  mkpixelfont.cpp  pack_shader.cpp  play_mml.cpp  prune_sprite_json.cpp  randtile.cpp  savetool.c
shim2/src/: a_star.cpp  achievements.cpp  apple.M  audio.cpp  cd.cpp  cloud.cpp  cpa.cpp  crash.cpp  devsettings.cpp  error.cpp  flac.cpp  font.cpp  gamecenter.M  gfx.cpp  gui.cpp  image.cpp  input.cpp  interp.cpp  ios.M  json.cpp  macosx.M  md5.cpp  mml.cpp  model.cpp  mt19937ar.cpp  pixel_font.cpp  primitives.cpp  sample.cpp  shader.cpp  shim.cpp  sound.cpp  sprite.cpp  steamworks.cpp  tilemap.cpp  tokenizer.cpp  translation.cpp  ttf.cpp  utf8.cpp  util.cpp  vertex_cache.cpp  (+4 more)
src/: achievements.cpp  apple.M  area_game.cpp  barter.cpp  battle_combo_drawer.cpp  battle_game.cpp  battle_player.cpp  battle_transition_in.cpp  battle_transition_in2.cpp  battle_transition_out2.cpp  battles.cpp  combo.cpp  dialogue.cpp  dog-o.cpp  enemies.cpp  fire.cpp  general.cpp  globals.cpp  gui.cpp  gui_drawing_hook.cpp  hit.cpp  inventory.cpp  ios.M  menu.cpp  multi.cpp  question.cpp  shop.cpp  shop_game.cpp  transition.cpp  widgets.cpp
tgui4/: CMakeLists.txt  versioninfo.rc
tgui4/include/tgui4/: tgui4.h  tgui4_sdl.h
tgui4/src/: tgui4.cpp  tgui4_sdl.cpp
wedge2/: CMakeLists.txt  versioninfo.rc
wedge2/include/wedge2/: a_star.h  (+61 more)
wedge2/src/: a_star.cpp  achieve.cpp  area.cpp  area_game.cpp  battle_end.cpp  battle_enemy.cpp  battle_entity.cpp  battle_game.cpp  battle_player.cpp  branch.cpp  change_angle.cpp  check_positions.cpp  chest.cpp  delay.cpp  delete_map_entity.cpp  fade.cpp  game.cpp  general.cpp  generic_callback.cpp  generic_gui.cpp  generic_immediate_callback.cpp  give_object.cpp  globals.cpp  input.cpp  inventory.cpp  look_around_input.cpp  main.cpp  map_entity.cpp  npc.cpp  offset_arc.cpp  omnipresent.cpp  onscreen_controller.cpp  pause_player_input.cpp  pause_presses.cpp  pause_sprite.cpp  pause_task.cpp  play_animation.cpp  play_music.cpp  play_sound.cpp  player_input.cpp  (+24 more)
(+741 files in other folders)
